tests/test_input_files/bad/test_bad_array_16.punkt
main {
	const A = [1, 2, 3].
	const B = [4, 5, 6].
	println A[B].
}
